# ai-assistant-extension

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: build.yml  publish.yml
base_assistant_extension/: __init__.py  base_extension.py  entry.py  extension_agent_factory.py  extension_host.py  extension_metadata.py
tests/test_functional/: fixture_extension.py  inference_server.py  test_extension.py  test_proxy_inference.py
