[tool.poetry]
name = "base-assistant-extension"
version = "0.6.5"
description = ""
authors = ["Samuel <samuelint@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
langchain = ">=0.2.6"
langgraph = ">=0.1.19"
langchain-openai = ">=0.1.20"
langchain-openai-api-bridge = ">=0.11.1"
fastapi = ">=0.112.0"
uvicorn = ">=0.30.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pyinstaller = "^6.8.0"

[tool.poetry.group.test]
[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-watch = "^4.2.0"
pytest-asyncio = "^0.23.7"
decoy = "^2.1.1"

[tool.poetry.extras]
host_dependencies = ["langchain", "langchain-openai", "langgraph", "fastapi", "uvicorn"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
